feat: landing upgrade
- Main page now has fade out animations.
- Re-added stats, updating ones will be added later.
- Default color is now black to blend with the fade in the main image.
- Ignore package-lock.

--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,10 @@
   -ms-overflow-style: none;
 }
 
+.background-test {
+  background: linear-gradient(to bottom, blue, black);
+}
+
 .text-gradient {
   background: linear-gradient(to right, rgb(174, 28, 28), rgb(167, 139, 250), rgb(132, 10, 74));
   -webkit-background-clip: text;
